@@ -1,7 +1,7 @@
 {
-   "abstract" : "Blah blah blah",
+   "abstract" : "Quote-like operator returning http request for the URL provided.",
    "author" : [
-      "Barry Walsh <draegtun@cpan.org>"
+      "Barry Walsh, C<< <draegtun at cpan.org> >>"
    ],
    "dynamic_config" : 0,
    "generated_by" : "Dist::Zilla version 5.032, Dist::Milla version v1.0.14, CPAN::Meta::Converter version 2.143240",
@@ -37,16 +37,33 @@
       },
       "runtime" : {
          "requires" : {
+            "LWP::Simple" : "0",
+            "PerlX::QuoteOperator" : "0.05",
             "perl" : "5.008005"
          }
       },
       "test" : {
          "requires" : {
-            "Test::More" : "0.96"
+            "Directory::Scratch" : "0",
+            "Test::More" : "0"
          }
       }
    },
    "release_status" : "stable",
-   "version" : "0.01"
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/draegtun/PerlX-QuoteOperator-URL/issues"
+      },
+      "homepage" : "https://github.com/draegtun/PerlX-QuoteOperator-URL",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/draegtun/PerlX-QuoteOperator-URL.git",
+         "web" : "https://github.com/draegtun/PerlX-QuoteOperator-URL"
+      }
+   },
+   "version" : "1.00",
+   "x_contributors" : [
+      "Barry Walsh <draegtun@googlemail.com>"
+   ]
 }
 
