@@ -1,8 +1,8 @@
 use strict;
 use Test::More;
-use PerlX::QuoteOperator::URL;
 
-# replace with the actual test
-ok 1;
+BEGIN {
+    use_ok( 'PerlX::QuoteOperator::URL' );
+}
 
 done_testing;
